scan_parse/parser.output
Grammatik

    0 $accept: program $end

    1 program: body

    2 func: head body tail

    3 head: tFUNC tID tLPAR par_decl_list tRPAR tCOL type

    4 body: decl_list stmt_list

    5 tail: tEND tID

    6 type: tID
    7     | tINTTYPE
    8     | tBOOLTYPE
    9     | tARRAYTYPE tOF type
   10     | tRECORDTYPE tOF tLCURL var_decl_list tRCURL

   11 par_decl_list: var_decl_list
   12              | %empty

   13 var_decl_list: var_type tCOM var_decl_list
   14              | var_type

   15 var_type: tID tCOL type

   16 decl_list: decl decl_list
   17          | %empty

   18 decl: tTYPE tID tASSI type tSEMI
   19     | func
   20     | tVAR var_decl_list tSEMI

   21 stmt_list: stmt
   22          | stmt stmt_list

   23 stmt: tRETURN exp tSEMI
   24     | tWRITE exp tSEMI
   25     | tALLOC var tSEMI
   26     | tALLOC var tOF tLEN exp tSEMI
   27     | var tASSI exp tSEMI
   28     | tIF exp tTHEN stmt
   29     | tIF exp tTHEN stmt tELSE stmt
   30     | tWHILE exp tDO stmt
   31     | tLCURL stmt_list tRCURL

   32 var: tID
   33    | var tLSQ exp tRSQ
   34    | var tDOT tID

   35 exp: exp tPLUS exp
   36    | exp tMINUS exp
   37    | exp tTIMES exp
   38    | exp tMOD exp
   39    | exp tDIV exp
   40    | exp tEQ exp
   41    | exp tNE exp
   42    | exp tLE exp
   43    | exp tGE exp
   44    | exp tLESS exp
   45    | exp tGREAT exp
   46    | exp tAND exp
   47    | exp tOR exp
   48    | term

   49 term: var
   50     | tID tLPAR act_list tRPAR
   51     | tLPAR exp tRPAR
   52     | tNEG term
   53     | tBAR exp tBAR
   54     | tINT
   55     | tTRUE
   56     | tFALSE
   57     | tNULL

   58 act_list: exp_list
   59         | %empty

   60 exp_list: exp
   61         | exp tCOM exp_list


Terminaler, med regler hvor de forekommer

$end (0) 0
error (256)
tINT (258) 54
tID (259) 3 5 6 15 18 32 34 50
tPLUS (260) 35
tMINUS (261) 36
tTIMES (262) 37
tDIV (263) 39
tEQ (264) 40
tNE (265) 41
tLE (266) 42
tGE (267) 43
tLESS (268) 44
tGREAT (269) 45
tAND (270) 46
tOR (271) 47
tLPAR (272) 3 50 51
tRPAR (273) 3 50 51
tLSQ (274) 33
tRSQ (275) 33
tLCURL (276) 10 31
tRCURL (277) 10 31
tEND (278) 5
tINTTYPE (279) 7
tBOOLTYPE (280) 8
tARRAYTYPE (281) 9
tOF (282) 9 10 26
tRECORDTYPE (283) 10
tTYPE (284) 18
tVAR (285) 20
tRETURN (286) 23
tWRITE (287) 24
tALLOC (288) 25 26
tLEN (289) 26
tIF (290) 28 29
tTHEN (291) 28 29
tELSE (292) 29
tWHILE (293) 30
tDO (294) 30
tNULL (295) 57
tTRUE (296) 55
tFALSE (297) 56
tASSI (298) 18 27
tNEG (299) 52
tDOT (300) 34
tFUNC (301) 3
tBAR (302) 53
tCOL (303) 3 15
tCOM (304) 13 61
tSEMI (305) 18 20 23 24 25 26 27
tMOD (306) 38


Ikke-terminaler, med regler hvor de forekommer

$accept (52)
    til venstre: 0
program (53)
    til venstre: 1, til højre: 0
func (54)
    til venstre: 2, til højre: 19
head (55)
    til venstre: 3, til højre: 2
body (56)
    til venstre: 4, til højre: 1 2
tail (57)
    til venstre: 5, til højre: 2
type (58)
    til venstre: 6 7 8 9 10, til højre: 3 9 15 18
par_decl_list (59)
    til venstre: 11 12, til højre: 3
var_decl_list (60)
    til venstre: 13 14, til højre: 10 11 13 20
var_type (61)
    til venstre: 15, til højre: 13 14
decl_list (62)
    til venstre: 16 17, til højre: 4 16
decl (63)
    til venstre: 18 19 20, til højre: 16
stmt_list (64)
    til venstre: 21 22, til højre: 4 22 31
stmt (65)
    til venstre: 23 24 25 26 27 28 29 30 31, til højre: 21 22 28 29
    30
var (66)
    til venstre: 32 33 34, til højre: 25 26 27 33 34 49
exp (67)
    til venstre: 35 36 37 38 39 40 41 42 43 44 45 46 47 48, til højre:
    23 24 26 27 28 29 30 33 35 36 37 38 39 40 41 42 43 44 45 46 47
    51 53 60 61
term (68)
    til venstre: 49 50 51 52 53 54 55 56 57, til højre: 48 52
act_list (69)
    til venstre: 58 59, til højre: 50
exp_list (70)
    til venstre: 60 61, til højre: 58 61


State 0

    0 $accept: . program $end

    tTYPE  skift, og gå til tilstand 1
    tVAR   skift, og gå til tilstand 2
    tFUNC  skift, og gå til tilstand 3

    $default  reducér med regel 17 (decl_list)

    program    gå til tilstand 4
    func       gå til tilstand 5
    head       gå til tilstand 6
    body       gå til tilstand 7
    decl_list  gå til tilstand 8
    decl       gå til tilstand 9


State 1

   18 decl: tTYPE . tID tASSI type tSEMI

    tID  skift, og gå til tilstand 10


State 2

   20 decl: tVAR . var_decl_list tSEMI

    tID  skift, og gå til tilstand 11

    var_decl_list  gå til tilstand 12
    var_type       gå til tilstand 13


State 3

    3 head: tFUNC . tID tLPAR par_decl_list tRPAR tCOL type

    tID  skift, og gå til tilstand 14


State 4

    0 $accept: program . $end

    $end  skift, og gå til tilstand 15


State 5

   19 decl: func .

    $default  reducér med regel 19 (decl)


State 6

    2 func: head . body tail

    tTYPE  skift, og gå til tilstand 1
    tVAR   skift, og gå til tilstand 2
    tFUNC  skift, og gå til tilstand 3

    $default  reducér med regel 17 (decl_list)

    func       gå til tilstand 5
    head       gå til tilstand 6
    body       gå til tilstand 16
    decl_list  gå til tilstand 8
    decl       gå til tilstand 9


State 7

    1 program: body .

    $default  reducér med regel 1 (program)


State 8

    4 body: decl_list . stmt_list

    tID      skift, og gå til tilstand 17
    tLCURL   skift, og gå til tilstand 18
    tRETURN  skift, og gå til tilstand 19
    tWRITE   skift, og gå til tilstand 20
    tALLOC   skift, og gå til tilstand 21
    tIF      skift, og gå til tilstand 22
    tWHILE   skift, og gå til tilstand 23

    stmt_list  gå til tilstand 24
    stmt       gå til tilstand 25
    var        gå til tilstand 26


State 9

   16 decl_list: decl . decl_list

    tTYPE  skift, og gå til tilstand 1
    tVAR   skift, og gå til tilstand 2
    tFUNC  skift, og gå til tilstand 3

    $default  reducér med regel 17 (decl_list)

    func       gå til tilstand 5
    head       gå til tilstand 6
    decl_list  gå til tilstand 27
    decl       gå til tilstand 9


State 10

   18 decl: tTYPE tID . tASSI type tSEMI

    tASSI  skift, og gå til tilstand 28


State 11

   15 var_type: tID . tCOL type

    tCOL  skift, og gå til tilstand 29


State 12

   20 decl: tVAR var_decl_list . tSEMI

    tSEMI  skift, og gå til tilstand 30


State 13

   13 var_decl_list: var_type . tCOM var_decl_list
   14              | var_type .

    tCOM  skift, og gå til tilstand 31

    $default  reducér med regel 14 (var_decl_list)


State 14

    3 head: tFUNC tID . tLPAR par_decl_list tRPAR tCOL type

    tLPAR  skift, og gå til tilstand 32


State 15

    0 $accept: program $end .

    $default  acceptér


State 16

    2 func: head body . tail

    tEND  skift, og gå til tilstand 33

    tail  gå til tilstand 34


State 17

   32 var: tID .

    $default  reducér med regel 32 (var)


State 18

   31 stmt: tLCURL . stmt_list tRCURL

    tID      skift, og gå til tilstand 17
    tLCURL   skift, og gå til tilstand 18
    tRETURN  skift, og gå til tilstand 19
    tWRITE   skift, og gå til tilstand 20
    tALLOC   skift, og gå til tilstand 21
    tIF      skift, og gå til tilstand 22
    tWHILE   skift, og gå til tilstand 23

    stmt_list  gå til tilstand 35
    stmt       gå til tilstand 25
    var        gå til tilstand 26


State 19

   23 stmt: tRETURN . exp tSEMI

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 45
    term  gå til tilstand 46


State 20

   24 stmt: tWRITE . exp tSEMI

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 47
    term  gå til tilstand 46


State 21

   25 stmt: tALLOC . var tSEMI
   26     | tALLOC . var tOF tLEN exp tSEMI

    tID  skift, og gå til tilstand 17

    var  gå til tilstand 48


State 22

   28 stmt: tIF . exp tTHEN stmt
   29     | tIF . exp tTHEN stmt tELSE stmt

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 49
    term  gå til tilstand 46


State 23

   30 stmt: tWHILE . exp tDO stmt

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 50
    term  gå til tilstand 46


State 24

    4 body: decl_list stmt_list .

    $default  reducér med regel 4 (body)


State 25

   21 stmt_list: stmt .
   22          | stmt . stmt_list

    tID      skift, og gå til tilstand 17
    tLCURL   skift, og gå til tilstand 18
    tRETURN  skift, og gå til tilstand 19
    tWRITE   skift, og gå til tilstand 20
    tALLOC   skift, og gå til tilstand 21
    tIF      skift, og gå til tilstand 22
    tWHILE   skift, og gå til tilstand 23

    $default  reducér med regel 21 (stmt_list)

    stmt_list  gå til tilstand 51
    stmt       gå til tilstand 25
    var        gå til tilstand 26


State 26

   27 stmt: var . tASSI exp tSEMI
   33 var: var . tLSQ exp tRSQ
   34    | var . tDOT tID

    tLSQ   skift, og gå til tilstand 52
    tASSI  skift, og gå til tilstand 53
    tDOT   skift, og gå til tilstand 54


State 27

   16 decl_list: decl decl_list .

    $default  reducér med regel 16 (decl_list)


State 28

   18 decl: tTYPE tID tASSI . type tSEMI

    tID          skift, og gå til tilstand 55
    tINTTYPE     skift, og gå til tilstand 56
    tBOOLTYPE    skift, og gå til tilstand 57
    tARRAYTYPE   skift, og gå til tilstand 58
    tRECORDTYPE  skift, og gå til tilstand 59

    type  gå til tilstand 60


State 29

   15 var_type: tID tCOL . type

    tID          skift, og gå til tilstand 55
    tINTTYPE     skift, og gå til tilstand 56
    tBOOLTYPE    skift, og gå til tilstand 57
    tARRAYTYPE   skift, og gå til tilstand 58
    tRECORDTYPE  skift, og gå til tilstand 59

    type  gå til tilstand 61


State 30

   20 decl: tVAR var_decl_list tSEMI .

    $default  reducér med regel 20 (decl)


State 31

   13 var_decl_list: var_type tCOM . var_decl_list

    tID  skift, og gå til tilstand 11

    var_decl_list  gå til tilstand 62
    var_type       gå til tilstand 13


State 32

    3 head: tFUNC tID tLPAR . par_decl_list tRPAR tCOL type

    tID  skift, og gå til tilstand 11

    $default  reducér med regel 12 (par_decl_list)

    par_decl_list  gå til tilstand 63
    var_decl_list  gå til tilstand 64
    var_type       gå til tilstand 13


State 33

    5 tail: tEND . tID

    tID  skift, og gå til tilstand 65


State 34

    2 func: head body tail .

    $default  reducér med regel 2 (func)


State 35

   31 stmt: tLCURL stmt_list . tRCURL

    tRCURL  skift, og gå til tilstand 66


State 36

   54 term: tINT .

    $default  reducér med regel 54 (term)


State 37

   32 var: tID .
   50 term: tID . tLPAR act_list tRPAR

    tLPAR  skift, og gå til tilstand 67

    $default  reducér med regel 32 (var)


State 38

   51 term: tLPAR . exp tRPAR

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 68
    term  gå til tilstand 46


State 39

   57 term: tNULL .

    $default  reducér med regel 57 (term)


State 40

   55 term: tTRUE .

    $default  reducér med regel 55 (term)


State 41

   56 term: tFALSE .

    $default  reducér med regel 56 (term)


State 42

   52 term: tNEG . term

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    term  gå til tilstand 69


State 43

   53 term: tBAR . exp tBAR

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 70
    term  gå til tilstand 46


State 44

   33 var: var . tLSQ exp tRSQ
   34    | var . tDOT tID
   49 term: var .

    tLSQ  skift, og gå til tilstand 52
    tDOT  skift, og gå til tilstand 54

    $default  reducér med regel 49 (term)


State 45

   23 stmt: tRETURN exp . tSEMI
   35 exp: exp . tPLUS exp
   36    | exp . tMINUS exp
   37    | exp . tTIMES exp
   38    | exp . tMOD exp
   39    | exp . tDIV exp
   40    | exp . tEQ exp
   41    | exp . tNE exp
   42    | exp . tLE exp
   43    | exp . tGE exp
   44    | exp . tLESS exp
   45    | exp . tGREAT exp
   46    | exp . tAND exp
   47    | exp . tOR exp

    tPLUS   skift, og gå til tilstand 71
    tMINUS  skift, og gå til tilstand 72
    tTIMES  skift, og gå til tilstand 73
    tDIV    skift, og gå til tilstand 74
    tEQ     skift, og gå til tilstand 75
    tNE     skift, og gå til tilstand 76
    tLE     skift, og gå til tilstand 77
    tGE     skift, og gå til tilstand 78
    tLESS   skift, og gå til tilstand 79
    tGREAT  skift, og gå til tilstand 80
    tAND    skift, og gå til tilstand 81
    tOR     skift, og gå til tilstand 82
    tSEMI   skift, og gå til tilstand 83
    tMOD    skift, og gå til tilstand 84


State 46

   48 exp: term .

    $default  reducér med regel 48 (exp)


State 47

   24 stmt: tWRITE exp . tSEMI
   35 exp: exp . tPLUS exp
   36    | exp . tMINUS exp
   37    | exp . tTIMES exp
   38    | exp . tMOD exp
   39    | exp . tDIV exp
   40    | exp . tEQ exp
   41    | exp . tNE exp
   42    | exp . tLE exp
   43    | exp . tGE exp
   44    | exp . tLESS exp
   45    | exp . tGREAT exp
   46    | exp . tAND exp
   47    | exp . tOR exp

    tPLUS   skift, og gå til tilstand 71
    tMINUS  skift, og gå til tilstand 72
    tTIMES  skift, og gå til tilstand 73
    tDIV    skift, og gå til tilstand 74
    tEQ     skift, og gå til tilstand 75
    tNE     skift, og gå til tilstand 76
    tLE     skift, og gå til tilstand 77
    tGE     skift, og gå til tilstand 78
    tLESS   skift, og gå til tilstand 79
    tGREAT  skift, og gå til tilstand 80
    tAND    skift, og gå til tilstand 81
    tOR     skift, og gå til tilstand 82
    tSEMI   skift, og gå til tilstand 85
    tMOD    skift, og gå til tilstand 84


State 48

   25 stmt: tALLOC var . tSEMI
   26     | tALLOC var . tOF tLEN exp tSEMI
   33 var: var . tLSQ exp tRSQ
   34    | var . tDOT tID

    tLSQ   skift, og gå til tilstand 52
    tOF    skift, og gå til tilstand 86
    tDOT   skift, og gå til tilstand 54
    tSEMI  skift, og gå til tilstand 87


State 49

   28 stmt: tIF exp . tTHEN stmt
   29     | tIF exp . tTHEN stmt tELSE stmt
   35 exp: exp . tPLUS exp
   36    | exp . tMINUS exp
   37    | exp . tTIMES exp
   38    | exp . tMOD exp
   39    | exp . tDIV exp
   40    | exp . tEQ exp
   41    | exp . tNE exp
   42    | exp . tLE exp
   43    | exp . tGE exp
   44    | exp . tLESS exp
   45    | exp . tGREAT exp
   46    | exp . tAND exp
   47    | exp . tOR exp

    tPLUS   skift, og gå til tilstand 71
    tMINUS  skift, og gå til tilstand 72
    tTIMES  skift, og gå til tilstand 73
    tDIV    skift, og gå til tilstand 74
    tEQ     skift, og gå til tilstand 75
    tNE     skift, og gå til tilstand 76
    tLE     skift, og gå til tilstand 77
    tGE     skift, og gå til tilstand 78
    tLESS   skift, og gå til tilstand 79
    tGREAT  skift, og gå til tilstand 80
    tAND    skift, og gå til tilstand 81
    tOR     skift, og gå til tilstand 82
    tTHEN   skift, og gå til tilstand 88
    tMOD    skift, og gå til tilstand 84


State 50

   30 stmt: tWHILE exp . tDO stmt
   35 exp: exp . tPLUS exp
   36    | exp . tMINUS exp
   37    | exp . tTIMES exp
   38    | exp . tMOD exp
   39    | exp . tDIV exp
   40    | exp . tEQ exp
   41    | exp . tNE exp
   42    | exp . tLE exp
   43    | exp . tGE exp
   44    | exp . tLESS exp
   45    | exp . tGREAT exp
   46    | exp . tAND exp
   47    | exp . tOR exp

    tPLUS   skift, og gå til tilstand 71
    tMINUS  skift, og gå til tilstand 72
    tTIMES  skift, og gå til tilstand 73
    tDIV    skift, og gå til tilstand 74
    tEQ     skift, og gå til tilstand 75
    tNE     skift, og gå til tilstand 76
    tLE     skift, og gå til tilstand 77
    tGE     skift, og gå til tilstand 78
    tLESS   skift, og gå til tilstand 79
    tGREAT  skift, og gå til tilstand 80
    tAND    skift, og gå til tilstand 81
    tOR     skift, og gå til tilstand 82
    tDO     skift, og gå til tilstand 89
    tMOD    skift, og gå til tilstand 84


State 51

   22 stmt_list: stmt stmt_list .

    $default  reducér med regel 22 (stmt_list)


State 52

   33 var: var tLSQ . exp tRSQ

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 90
    term  gå til tilstand 46


State 53

   27 stmt: var tASSI . exp tSEMI

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 91
    term  gå til tilstand 46


State 54

   34 var: var tDOT . tID

    tID  skift, og gå til tilstand 92


State 55

    6 type: tID .

    $default  reducér med regel 6 (type)


State 56

    7 type: tINTTYPE .

    $default  reducér med regel 7 (type)


State 57

    8 type: tBOOLTYPE .

    $default  reducér med regel 8 (type)


State 58

    9 type: tARRAYTYPE . tOF type

    tOF  skift, og gå til tilstand 93


State 59

   10 type: tRECORDTYPE . tOF tLCURL var_decl_list tRCURL

    tOF  skift, og gå til tilstand 94


State 60

   18 decl: tTYPE tID tASSI type . tSEMI

    tSEMI  skift, og gå til tilstand 95


State 61

   15 var_type: tID tCOL type .

    $default  reducér med regel 15 (var_type)


State 62

   13 var_decl_list: var_type tCOM var_decl_list .

    $default  reducér med regel 13 (var_decl_list)


State 63

    3 head: tFUNC tID tLPAR par_decl_list . tRPAR tCOL type

    tRPAR  skift, og gå til tilstand 96


State 64

   11 par_decl_list: var_decl_list .

    $default  reducér med regel 11 (par_decl_list)


State 65

    5 tail: tEND tID .

    $default  reducér med regel 5 (tail)


State 66

   31 stmt: tLCURL stmt_list tRCURL .

    $default  reducér med regel 31 (stmt)


State 67

   50 term: tID tLPAR . act_list tRPAR

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    $default  reducér med regel 59 (act_list)

    var       gå til tilstand 44
    exp       gå til tilstand 97
    term      gå til tilstand 46
    act_list  gå til tilstand 98
    exp_list  gå til tilstand 99


State 68

   35 exp: exp . tPLUS exp
   36    | exp . tMINUS exp
   37    | exp . tTIMES exp
   38    | exp . tMOD exp
   39    | exp . tDIV exp
   40    | exp . tEQ exp
   41    | exp . tNE exp
   42    | exp . tLE exp
   43    | exp . tGE exp
   44    | exp . tLESS exp
   45    | exp . tGREAT exp
   46    | exp . tAND exp
   47    | exp . tOR exp
   51 term: tLPAR exp . tRPAR

    tPLUS   skift, og gå til tilstand 71
    tMINUS  skift, og gå til tilstand 72
    tTIMES  skift, og gå til tilstand 73
    tDIV    skift, og gå til tilstand 74
    tEQ     skift, og gå til tilstand 75
    tNE     skift, og gå til tilstand 76
    tLE     skift, og gå til tilstand 77
    tGE     skift, og gå til tilstand 78
    tLESS   skift, og gå til tilstand 79
    tGREAT  skift, og gå til tilstand 80
    tAND    skift, og gå til tilstand 81
    tOR     skift, og gå til tilstand 82
    tRPAR   skift, og gå til tilstand 100
    tMOD    skift, og gå til tilstand 84


State 69

   52 term: tNEG term .

    $default  reducér med regel 52 (term)


State 70

   35 exp: exp . tPLUS exp
   36    | exp . tMINUS exp
   37    | exp . tTIMES exp
   38    | exp . tMOD exp
   39    | exp . tDIV exp
   40    | exp . tEQ exp
   41    | exp . tNE exp
   42    | exp . tLE exp
   43    | exp . tGE exp
   44    | exp . tLESS exp
   45    | exp . tGREAT exp
   46    | exp . tAND exp
   47    | exp . tOR exp
   53 term: tBAR exp . tBAR

    tPLUS   skift, og gå til tilstand 71
    tMINUS  skift, og gå til tilstand 72
    tTIMES  skift, og gå til tilstand 73
    tDIV    skift, og gå til tilstand 74
    tEQ     skift, og gå til tilstand 75
    tNE     skift, og gå til tilstand 76
    tLE     skift, og gå til tilstand 77
    tGE     skift, og gå til tilstand 78
    tLESS   skift, og gå til tilstand 79
    tGREAT  skift, og gå til tilstand 80
    tAND    skift, og gå til tilstand 81
    tOR     skift, og gå til tilstand 82
    tBAR    skift, og gå til tilstand 101
    tMOD    skift, og gå til tilstand 84


State 71

   35 exp: exp tPLUS . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 102
    term  gå til tilstand 46


State 72

   36 exp: exp tMINUS . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 103
    term  gå til tilstand 46


State 73

   37 exp: exp tTIMES . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 104
    term  gå til tilstand 46


State 74

   39 exp: exp tDIV . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 105
    term  gå til tilstand 46


State 75

   40 exp: exp tEQ . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 106
    term  gå til tilstand 46


State 76

   41 exp: exp tNE . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 107
    term  gå til tilstand 46


State 77

   42 exp: exp tLE . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 108
    term  gå til tilstand 46


State 78

   43 exp: exp tGE . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 109
    term  gå til tilstand 46


State 79

   44 exp: exp tLESS . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 110
    term  gå til tilstand 46


State 80

   45 exp: exp tGREAT . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 111
    term  gå til tilstand 46


State 81

   46 exp: exp tAND . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 112
    term  gå til tilstand 46


State 82

   47 exp: exp tOR . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 113
    term  gå til tilstand 46


State 83

   23 stmt: tRETURN exp tSEMI .

    $default  reducér med regel 23 (stmt)


State 84

   38 exp: exp tMOD . exp

    tINT    skift, og gå til tilstand 36
    tID     skift, og gå til tilstand 37
    tLPAR   skift, og gå til tilstand 38
    tNULL   skift, og gå til tilstand 39
    tTRUE   skift, og gå til tilstand 40
    tFALSE  skift, og gå til tilstand 41
    tNEG    skift, og gå til tilstand 42
    tBAR    skift, og gå til tilstand 43

    var   gå til tilstand 44
    exp   gå til tilstand 114
    term  gå til tilstand 46


State 85

   24 stmt: tWRITE exp tSEMI .

    $default  reducér med regel 24 (stmt)


State 86

   26 stmt: tALLOC var tOF . tLEN exp tSEMI

    tLEN  skift, og gå til tilstand 115


State 87

   25 stmt: tALLOC var tSEMI .

    $default  reducér med regel 25 (stmt)


State 88

   28 stmt: tIF exp tTHEN . stmt
   29     | tIF exp tTHEN . stmt tELSE stmt

    tID      skift, og gå til tilstand 17
    tLCURL   skift, og gå til tilstand 18
    tRETURN  skift, og gå til tilstand 19
    tWRITE   skift, og gå til tilstand 20
    tALLOC   skift, og gå til tilstand 21
    tIF      skift, og gå til tilstand 22
    tWHILE   skift, og gå til tilstand 23

    stmt  gå til tilstand 116
    var   gå til tilstand 26


State 89

   30 stmt: tWHILE exp tDO . stmt
